@@ -96,8 +96,6 @@ export.database: exports database structure and data to xml files.
   <property name="buildValidation" value="true"/>
   <property name="modules" value=""/> 
  
-  <available file=".hg" property="is.hg" />
-
   <condition property="xdoclint.missing" value="" else="-Xdoclint:-missing">
     <equals arg1="${ant.java.version}" arg2="1.7"/>
   </condition>
@@ -347,22 +345,23 @@ export.database: exports database structure and data to xml files.
   
   <taskdef resource="axis-tasks.properties" classpathref="project.class.path" />
   
-  <target name="init" depends="code.rev">
+  <target name="init">
     <fail if="root.user" message="Don't run ant tasks with the root user" />
     <fail if="no.java.home" message="The environment variable JAVA_HOME is not set." />
-  </target>
-
-  <target name="code.rev" depends="set.code.rev">
-    <condition property="code.revision" value="${hg.id}" else="0">
-      <isset property="hg.id" />
-    </condition>
-  </target>
-
-  <target name="set.code.rev" if="is.hg">
-    <exec executable="hg" outputproperty="hg.id" failifexecutionfails="false">
-      <arg value="id"/>
-      <arg value="-i"/>
-    </exec>
+    <fail message="Unsupported Java version ${ant.java.version}. Minimum required is 7 (1.7).">
+      <condition>
+        <equals arg1="${ant.java.version}" arg2="1.6"/>
+      </condition>
+    </fail>
+    <antversion property="min.ant.version" atleast="1.9.2" />
+    <antversion property="actual.ant.version" />
+    <fail message="Unsupported ant version ${actual.ant.version}. Minimum required is 1.9.2.">
+      <condition>
+        <not>
+          <isset property="min.ant.version"/>
+        </not>
+      </condition>
+    </fail>
   </target>
 
   <target name="compile.complete" depends="init, core.lib, wad.lib, trl.lib">
@@ -821,7 +820,6 @@ export.database: exports database structure and data to xml files.
       <jvmarg line="${env.CATALINA_OPTS}" />
       <jvmarg value="-Djava.util.logging.manager=org.apache.juli.ClassLoaderLogManager" />
       <jvmarg value="-Djava.util.logging.config.file=${env.CATALINA_BASE}/conf/logging.properties" />
-      <jvmarg value="-Djava.endorsed.dirs=${env.CATALINA_HOME}/endorsed" />
       <jvmarg value="-Dcatalina.base=${env.CATALINA_BASE}" />
       <jvmarg value="-Dcatalina.home=${env.CATALINA_HOME}" />
       <jvmarg value="-Djava.io.tmpdir=${env.CATALINA_BASE}/temp" />
@@ -951,8 +949,6 @@ export.database: exports database structure and data to xml files.
                    replace="\1${core.rev}\3"
                    byline="true"/>
     
-    <echo message="${hg.id}" file="${tmpdir}/config/instance.revision"/>
-	
     <delete includeEmptyDirs="true">
       <fileset dir="${tmpdir}/modules" includes="**/*" defaultexcludes="no"/>
     </delete>
